Belajar HTML List, Tabel dan Form

--- a/index.html
+++ b/index.html
@@ -6,6 +6,52 @@
     <title>Pertemuan 2 - HTML & CSS Lanjutan</title>
 </head>
 <body>
-    
+    <h1> - Membuat List - </h1>
+    <p>Daftar Kampus di Jogja</p>
+    <ul>
+        <li>UGM</li>
+        <li>AMIKOM</li>
+        <li>COLLEGE OF WINTERHOLD</li>
+        <li>UPN</li>
+    </ul>
+    <h1> - Membuat Tabel - </h1>
+    <p>Daftar Penduduk di Jogja</p>
+    <table>
+        <thead>
+            <tr>
+                <td> Kabupaten </td>
+                <td> Jumlah </td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td> Sleman </td>
+                <td> 1.900.00 </td>
+            </tr>
+            <tr>
+                <td> Klaten </td>
+                <td> 1.000.00 </td>
+            </tr>
+            <tr>
+                <td> Skyrim </td>
+                <td> 1.500.00 </td>
+            </tr>
+        </tbody>
+    </table>
+    <h1> - Membuat Form - </h1>
+    <p> Form Input Data Penduduk </p>
+    <form action="#">
+        <div>
+            <span> Masukkan Nama Kabupaten </span>
+            <input type="text" placeholder="Nama Kabupaten">
+        </div>
+        <div>
+            <span> Jumlah Penduduk </span>
+            <input type="text" placeholder="Jumlah">
+        </div>
+        <div>
+            <span><button> Simpan </button></span>
+        </div>
+    </form>
 </body>
 </html>
